@@ -118,8 +118,11 @@
                                 <arg>
                                     -Ob
                                     -H:+UnlockExperimentalVMOptions
-                                    -march=compatibility --enable-preview -H:DashboardDump=${imageName}
-                                    -H:+DashboardAll -H:IncludeResources= --enable-url-protocols=http --enable-url-protocols=https --enable-monitoring=heapdump
+                                    --allow-incomplete-classpath
+                                    -march=compatibility
+                                    -H:DashboardDump=${imageName}
+                                    -H:+DashboardAll
+                                    -H:IncludeResources=
                                 </arg>
                             </buildArgs>
                             <agent>
